obsidian-tidy-lexer/src/token_stream/interceptor/snapshots/obsidian_tidy_lexer__token_stream__interceptor__callout_interceptor__tests__callout_with_markdown_inside.snap
---
source: obsidian-tidy-lexer/src/token_stream/interceptor/callout_interceptor.rs
expression: tokens
---
[
  [
    {
      "Start": {
        "Callout": {
          "kind": "tip",
          "header_offset": {
            "start": 2,
            "end": 8
          },
          "foldable": "None"
        }
      }
    },
    {
      "start": 0,
      "end": 32
    }
  ],
  [
    {
      "Start": "Paragraph"
    },
    {
      "start": 2,
      "end": 32
    }
  ],
  [
    {
      "Text": "["
    },
    {
      "start": 2,
      "end": 3
    }
  ],
  [
    {
      "Text": "!tip"
    },
    {
      "start": 3,
      "end": 7
    }
  ],
  [
    {
      "Text": "]"
    },
    {
      "start": 7,
      "end": 8
    }
  ],
  [
    "SoftBreak",
    {
      "start": 8,
      "end": 9
    }
  ],
  [
    {
      "Start": "Strong"
    },
    {
      "start": 11,
      "end": 19
    }
  ],
  [
    {
      "Text": "Bold"
    },
    {
      "start": 13,
      "end": 17
    }
  ],
  [
    {
      "End": "Strong"
    },
    {
      "start": 11,
      "end": 19
    }
  ],
  [
    {
      "Text": " and "
    },
    {
      "start": 19,
      "end": 24
    }
  ],
  [
    {
      "Start": "Emphasis"
    },
    {
      "start": 24,
      "end": 32
    }
  ],
  [
    {
      "Text": "italic"
    },
    {
      "start": 25,
      "end": 31
    }
  ],
  [
    {
      "End": "Emphasis"
    },
    {
      "start": 24,
      "end": 32
    }
  ],
  [
    {
      "End": "Paragraph"
    },
    {
      "start": 2,
      "end": 32
    }
  ],
  [
    {
      "End": "Callout"
    },
    {
      "start": 0,
      "end": 32
    }
  ]
]
