obsidian-tidy-lexer/src/token_stream/interceptor/snapshots/obsidian_tidy_lexer__token_stream__interceptor__callout_interceptor__tests__tags_are_balanced.snap
---
source: obsidian-tidy-lexer/src/token_stream/interceptor/callout_interceptor.rs
expression: tokens
---
[
  [
    {
      "Start": {
        "Callout": {
          "kind": "tip",
          "header_offset": {
            "start": 2,
            "end": 8
          },
          "foldable": "None"
        }
      }
    },
    {
      "start": 0,
      "end": 65
    }
  ],
  [
    {
      "Start": "Paragraph"
    },
    {
      "start": 2,
      "end": 21
    }
  ],
  [
    {
      "Text": "["
    },
    {
      "start": 2,
      "end": 3
    }
  ],
  [
    {
      "Text": "!tip"
    },
    {
      "start": 3,
      "end": 7
    }
  ],
  [
    {
      "Text": "]"
    },
    {
      "start": 7,
      "end": 8
    }
  ],
  [
    "SoftBreak",
    {
      "start": 8,
      "end": 9
    }
  ],
  [
    {
      "Text": "Content 1"
    },
    {
      "start": 11,
      "end": 20
    }
  ],
  [
    {
      "End": "Paragraph"
    },
    {
      "start": 2,
      "end": 21
    }
  ],
  [
    {
      "Start": {
        "Callout": {
          "kind": "warning",
          "header_offset": {
            "start": 27,
            "end": 37
          },
          "foldable": "None"
        }
      }
    },
    {
      "start": 25,
      "end": 52
    }
  ],
  [
    {
      "Start": "Paragraph"
    },
    {
      "start": 27,
      "end": 52
    }
  ],
  [
    {
      "Text": "["
    },
    {
      "start": 27,
      "end": 28
    }
  ],
  [
    {
      "Text": "!warning"
    },
    {
      "start": 28,
      "end": 36
    }
  ],
  [
    {
      "Text": "]"
    },
    {
      "start": 36,
      "end": 37
    }
  ],
  [
    "SoftBreak",
    {
      "start": 37,
      "end": 38
    }
  ],
  [
    {
      "Text": "Content 2"
    },
    {
      "start": 42,
      "end": 51
    }
  ],
  [
    {
      "End": "Paragraph"
    },
    {
      "start": 27,
      "end": 52
    }
  ],
  [
    {
      "End": "Callout"
    },
    {
      "start": 25,
      "end": 52
    }
  ],
  [
    {
      "Start": "Paragraph"
    },
    {
      "start": 56,
      "end": 65
    }
  ],
  [
    {
      "Text": "Content 3"
    },
    {
      "start": 56,
      "end": 65
    }
  ],
  [
    {
      "End": "Paragraph"
    },
    {
      "start": 56,
      "end": 65
    }
  ],
  [
    {
      "End": "Callout"
    },
    {
      "start": 0,
      "end": 65
    }
  ]
]
